--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 :root {
-  --main-color: #5ea3d0;
+  --main-color: #80cbc4   ;
   --secondary-color: white;
   --main-text-color: #3e5869;
-  --secondary-text-color: #b0c7d6;
+  --secondary-text-color: #F5F5F5;
   --send-message-form: #F5F5F5;
+  --new-room:#a1887f
 }
 
 html, body {
@@ -23,8 +24,11 @@ html, body {
   display: grid;
   height: 100%;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 60px;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr  5fr 6fr 60px;
   grid-template-areas: 
+      "s s s s s s"
+      "r m m m m m"
+      "r m m m m m"
       "r m m m m m"
       "r m m m m m"
       "r m m m m m"
@@ -33,7 +37,9 @@ html, body {
       "n f f f f f";
 }
 
-
+.nav {
+  grid-area: s;
+}
 .new-room-form {
   grid-area: n;
 }
@@ -96,7 +102,7 @@ html, body {
 .new-room-form {
   padding: 0 5px;
   background: var(--secondary-color);
-  color: var(--main-text-color);
+  color: var(--new-room);
 }
 
 .new-room-form form {
@@ -206,3 +212,15 @@ html, body {
   top: 10px;
 }
 
+
+.sigin-container {
+  margin-top: 200px;
+}
+
+.signup-container {
+  margin-top: 200px;
+}
+
+.btn {
+  margin-left: 10px;
+}
